tests/NormalTests/paczka1/fuzzy1/94084399.err
Error in line 3: I8Ld A400 3,9
Error in line 4: I8Ld A23 18,1
Error in line 11: SY0E43k9PI A400 18,29
Error in line 14: QF9 S209 60,9
Error in line 16: A767 A23 78,8
Error in line 25: A767 S209 23,8
Error in line 34: A767 A767 48,0
